pravki ot vitali PC

--- a/index.html
+++ b/index.html
@@ -25,27 +25,29 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Продукты <img src="img/nav/arrow.svg" alt="arrow"></a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a>
+                        <a class="dropdown-item" href="#marketing_instrument">Инструменты маркетинга</a>
+                        <a class="dropdown-item" href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a>
+                        <a class="dropdown-item" href="#globalnyi_poisk">Глобальный поиск экспертов</a>
+                        <a class="dropdown-item" href="#delovaya_socialnaya_set">Деловая социальная сеть</a>
                     </div>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item active d-none">
                     <a class="nav-link" href="#">Расписание</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Продюсирование</a>
+                    <a class="nav-link" href="#produsirovanie">Продюсирование</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Наши эксперты</a>
+                    <a class="nav-link" href="https://p.smartexpert.net/author-rating">Наши эксперты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Цены</a>
+                    <a class="nav-link" href="#tarifs">Цены</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="#" class="btn btn-success-1 my-2 my-sm-0 mr-sm-2">Пробная версия</a>
-                <a href="#" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
+                <a href="#" class="btn btn-success-1 my-2 my-sm-0 mr-sm-2 d-none">Пробная версия</a>
+                <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
             </form>
         </div>
     </nav>
@@ -60,7 +62,7 @@
                 <div class="col-md-8">
                     <h1>Smart Expert - онлайн сообщество для развития, продвижения и монетизации экспертных знаний</h1>
                     <p class="undertitle">Помогаем экспертам зарабатывать, общаться и развиваться</p>
-                    <a href="#" class="btn btn-primary">Начать использовать</a><br>
+                    <a href="https://p.smartexpert.net/register" class="btn btn-primary">Начать использовать</a><br>
                     <span class="label"><img src="img/sec_1/goal.svg" alt="">Наша цель: + 1 000 000 000 экспертов</span>
                 </div>
                 <div class="col-md-4">
@@ -120,13 +122,13 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-7">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vMW2jl241QY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="video" class="embed-responsive-item" src="https://www.youtube.com/embed/vMW2jl241QY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-md-5">
                     <h2>Продвигай личный бренд, содавай курсы и автоматизируй продажи!</h2>
                     <p>SmartExpert - это полный набор инструментов для создания образовательных проектов, автоматизации продаж и продижения личного бренда.</p>
-                    <a href="#" class="btn btn-primary">Посмотреть обзор</a>
+                    <a id="play-video" href="#" class="btn btn-primary">Посмотреть обзор</a>
                 </div>
             </div>
         </div>
@@ -223,7 +225,7 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic stone_red" src="img/abs_pic/stone_red.svg">
-            <div class="row">
+            <div id="produsirovanie" class="row">
                 <div class="col-12">
                     <div class="sec_title">
                         <img src="img/sec_4/title_label.svg" alt="title_label">
@@ -360,7 +362,7 @@
                 </div>
             </div>
             <div class="screen_list">
-                <div class="row align-items-center">
+                <div id="prodvizhenie_lichnogo_brenda" class="row align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
@@ -374,11 +376,11 @@
                             <h3>Продвижение личного бренда</h3>
                             <p>Все новые технологии и методики продвижения личного бренда внедрены на платформе Smart Expert. Создай свою собственную БИЗНЕС ВИЗИТКУ, в которой ты сможешь указать все свои достижения и результаты, интересы, навыки и
                                 специализацию. И это увидят более 2 млн человек! </p>
-                            <a href="#" class="btn btn-success">Узнать больше</a>
+                            <a href="#tarifs" class="btn btn-success">Узнать больше</a>
                         </div>
                     </div>
                 </div>
-                <div class="row flex-md-row-reverse align-items-center">
+                <div id="marketing_instrument" class="row flex-md-row-reverse align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <img src="img/sec_8/marketing_instrument_1.jpg">
@@ -390,11 +392,11 @@
                             <p>Smart Expert открывает уникальные инструменты эффективного привлечения клиентов на ваши образовательные продукты. <br> Пишите статьи и продвигайте свою эксперность на аудиторию в 2 млн человек, применяйте
                                 автоматизированные
                                 воронки продаж и выстраивайте эффективное взаимодействие с потенциальными клиентами</p>
-                            <a href="#" class="btn btn-success">Узнать больше</a>
+                            <a href="#tarifs" class="btn btn-success">Узнать больше</a>
                         </div>
                     </div>
                 </div>
-                <div class="row align-items-center">
+                <div id="platforma_dlya_obuchenia" class="row align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
@@ -408,11 +410,11 @@
                             <h3>Платформа для онлайн обучения</h3>
                             <p>Вас ждет удобный конструктор курсов, который позволит настроить обучение максимально эффективно. Добавляйте обучающие материалы, создавайте онлайн мероприятия, проводите вебинары и мастермаинды. И все это настраивается
                                 в одном месте - легко и быстро! </p>
-                            <a href="#" class="btn btn-success">Узнать больше</a>
+                            <a href="#tarifs" class="btn btn-success">Узнать больше</a>
                         </div>
                     </div>
                 </div>
-                <div class="row flex-md-row-reverse align-items-center">
+                <div id="delovaya_socialnaya_set" class="row flex-md-row-reverse align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <img src="img/sec_8/delovaya_socialnaya_set_1.jpg">
@@ -423,11 +425,11 @@
                             <h3>Деловая социальная сеть</h3>
                             <p>Создавайте личный профиль в закрытой социальной сети, где вас ждет: нетворкинг, решение ваших бизнес задач, удобный мессенджер для общения. Все это - возможности для вашего роста, продвижения личного бренда,
                                 формирования сильного окружения! </p>
-                            <a href="#" class="btn btn-success">Узнать больше</a>
+                            <a href="#tarifs" class="btn btn-success">Узнать больше</a>
                         </div>
                     </div>
                 </div>
-                <div class="row align-items-center">
+                <div id="globalnyi_poisk" class="row align-items-center">
                     <div class="col-md-6">
                         <div class="slide_bg">
                             <div class="imageSlider">
@@ -441,7 +443,7 @@
                             <h3>Глобальный поиск экспертов</h3>
                             <p>Нужно быстро найти Топ-менеджера в свой бизнес? Необходима консультация маркетолога или эксперта по продажам? В сообществе Smart Expert вас ждут лучшие эксперты, навыки которых подтверждаются специальным рейтингом! Это
                                 поможет вам выбрать лучших из лучших для решения своих задач! </p>
-                            <a href="#" class="btn btn-success">Узнать больше</a>
+                            <a href="#tarifs" class="btn btn-success">Узнать больше</a>
                         </div>
                     </div>
                 </div>
@@ -468,9 +470,9 @@
                         <div class="card_profile">
                             <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
                             <h3>Константин Лашкевич</h3>
-                            <p>Автор курса “Семейные Финансы”</p>
-                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения
-                                клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
+                            <p>Инвестор IT, ed-tech, LMS, Практик корпоративного управления</p>
+                            <i>“Эта платформа, проект и команда - создают нечто космическое. На платформе собран весь инструментарий для продвижения личного бренда и полной упаковки продукта полного цикла, начиная от лендинга до награждения
+                                участников. Супер!”</i>
                         </div>
                     </div>
                     <div class="col-md-4 py-5 px-4">
@@ -485,10 +487,11 @@
 
                     <div class="col-md-4 py-5 px-4">
                         <div class="card_profile">
-                            <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
-                            <h3>Айше Борсеитова</h3>
-                            <p>Школа английского языка <br> WOW-EFFECT</p>
-                            <i>“Мой марафон Английский за 30 дней на платформе Smart Expert - это нечто! У меня еще никогда небыло такой высокой вовлеченности учеников в процесс обучения. Smart Expert - это просто бомба для авторов курса!”</i>
+                            <div class="icon" style="background-image: url('img/sec_9/iomtov.jpg');"></div>
+                            <h3>Йом-Тов Шуфотинский</h3>
+                            <p>Автор курса “Семейные Финансы”</p>
+                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения
+                                клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
                         </div>
                     </div>
 
@@ -509,7 +512,7 @@
     <section class="sec sec_10">
         <div class="container">
             <img class="abs_pic" src="img/sec_10/abs_pic.svg" alt="abs_pic">
-            <div class="row">
+            <div id="tarifs" class="row">
                 <div class="col-12">
                     <div class="sec_title">
                         <img src="img/sec_9/title_label.svg" alt="title_label">
@@ -542,7 +545,7 @@
                             <span class="old_price_title">регулярная стоимость</span>
                             <span class="old_price"><span>$19</span> в месяц</span>
                         </div>
-                        <a href="" class="btn btn-success">Начать использовать</a>
+                        <a href="https://p.smartexpert.net/register" class="btn btn-success">Начать использовать</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -567,7 +570,7 @@
                             <span class="old_price_title">регулярная стоимость</span>
                             <span class="old_price"><span>$49</span> в месяц</span>
                         </div>
-                        <a href="" class="btn btn-success">Начать использовать</a>
+                        <a href="https://p.smartexpert.net/register" class="btn btn-success">Начать использовать</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -592,7 +595,7 @@
                             <span class="old_price_title">регулярная стоимость</span>
                             <span class="old_price"><span>$149</span> в месяц</span>
                         </div>
-                        <a href="" class="btn btn-success">Начать использовать</a>
+                        <a href="https://p.smartexpert.net/register" class="btn btn-success">Начать использовать</a>
                     </div>
                 </div>
             </div>
@@ -616,24 +619,24 @@
     <!-- sec_12 -->
     <section class="sec sec_12">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-between">
                 <div class="col-md-3">
                     <h4>Компания</h4>
                     <ul>
-                        <li><a href="#">Цены</a></li>
+                        <li><a href="#tarifs">Цены</a></li>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">База знаний</a></li>
-                        <li><a href="#">Пробная версия</a></li>
+                        <li><a href="#" class="d-none">Пробная версия</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h4>Продукты</h4>
                     <ul>
-                        <li><a href="#">Платформа для онлайн-обучения</a></li>
-                        <li><a href="#">Инструменты маркетинга</a></li>
-                        <li><a href="#">Продвижение личного бренда</a></li>
-                        <li><a href="#">Глобальный поиск экспертов</a></li>
-                        <li><a href="#">Деловая социальная сеть</a></li>
+                        <li><a href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a></li>
+                        <li><a href="#marketing_instrument">Инструменты маркетинга</a></li>
+                        <li><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></li>
+                        <li><a href="#globalnyi_poisk">Глобальный поиск экспертов</a></li>
+                        <li><a href="#delovaya_socialnaya_set">Деловая социальная сеть</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -650,7 +653,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 d-none">
                     <div class="form-group">
                         <select class="form-control" id="lang">
                             <option selected>Russian</option>
@@ -675,7 +678,7 @@
     </footer>
     <!-- / footer -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/lightslider.min.js"></script>
@@ -734,6 +737,51 @@
                     }
                 }]
 
+            });
+
+            // scrollToSection
+            // Select all links with hashes
+            $('a[href*="#"]')
+                // Remove links that don't actually link to anything
+                .not('[href="#"]')
+                .not('[href="#0"]')
+                .click(function(event) {
+                    // On-page links
+                    if (
+                        location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') &&
+                        location.hostname == this.hostname
+                    ) {
+                        // Figure out element to scroll to
+                        var target = $(this.hash);
+                        target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                        // Does a scroll target exist?
+                        if (target.length) {
+                            // Only prevent default if animation is actually gonna happen
+                            event.preventDefault();
+                            $('html, body').animate({
+                                scrollTop: target.offset().top - 100 + 'px'
+                            }, 500, function() {
+                                // Callback after animation
+                                // Must change focus!
+                                var $target = $(target);
+                                $target.focus();
+                                if ($target.is(":focus")) { // Checking if the target was focused
+                                    return false;
+                                } else {
+                                    $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
+                                    $target.focus(); // Set focus again
+                                };
+                            });
+                        }
+                    }
+                });
+
+            $(document).ready(function() {
+                $('#play-video').on('click', function(ev) {
+                    ev.preventDefault();
+                    $("#video")[0].src = "http://www.youtube.com/embed/vMW2jl241QY?autoplay=1&origin=http://example.com";
+                    ev.preventDefault();
+                });
             });
         });
     </script>
