--- a/index.html
+++ b/index.html
@@ -118,19 +118,258 @@
         </div>
     </section>
     <!-- / sec_bio -->
-    <section class="sec sec_my_projects">
+    <!-- sec_offer -->
+    <section class="sec sec_offer">
         <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-5 col-md-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-7 col-md-6">
+                    <p class="main-txt">
+                        С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента. Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста?
+                    </p>
+                    <a href="#" class="btn btn-orange">
+                        ДА, ХОЧУ
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_offer -->
+    <section class="sec sec_my_projects">
+            <img alt="" class="abs_pic brain" src="img/abs_pic/brain.svg">
+        <div class="container">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
                 <h2>Мои проекты</h2>
-                <p>В сообществе Smart Expert меня окружают успешные специалисты, авторы <br> обучающих программ и эксперты, которые могут быть вам полезны!</p>
             </div>
-            <div class="card table-responsive">
-                <table class="table">
+            <div class="card with-date">
+                <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
+                <div class="media align-items-center">
+                  <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                  <div class="media-body">
+                    <div class="date_wrap">
+                        <div class="item">
+                            <span>Старт</span>
+                            <div class="date">
+                                <div>1</div>
+                                <span>июн</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <span>Финиш</span>
+                            <div class="date">
+                                <div>19</div>
+                                <span>июн</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="card_subtitle">Онлайн марафон</p>
+                    <h4 class="card_title">Акселератор Карьерного Роста</h4>
+                    <div class="b-card-body">
+                        <ul class="list">
+                            <li>Соверши настоящий прорыв в карьере за 12 месяцев</li>
+                            <li>Прокачай менеджмент и создай личную стратегию кратного роста на 5 лет</li>
+                            <li>Обрети новые связи для карьерных и бизнес целей</li>
+                            <li>Измени себя и свою команду, подними стандарты жизни</li>
+                        </ul>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="b-card-footer">
+                       <div class="counter">12 этапов, 60 уроков</div> 
+                       <div class="views">
+                           <img class="mr-1" src="img/icons/human.svg">
+                           1011
+                       </div>
+                       <a class="link btn btn-blue" href="#">Подробнее</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="media align-items-center">
+                  <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img2.jpg" alt="Generic placeholder image">
+                  <div class="media-body">
+                    <p class="card_subtitle">Positive</p>
+                    <h4 class="card_title">Positive People: Волонтерское Движение</h4>
+                    <div class="b-card-body">
+                        <ul class="list">
+                            <li>Сделай вклад в развитие людей, создай позитивный нетворкинг с выдающимися людьми, получи доступ к обучающим программам бесплатно</li>
+                            <li>Прими участие в организации оффлайн ивентов и оказывай поддержку участникам онлайн акселератора</li>
+                            <li>Пройди тест и получи доступ в он-лайн школу волонтеров, получи возможность принимать участие в лучших образовательных семинарах в России и по всему миру совершенно бесплатно</li>
+                        </ul>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="b-card-footer justify-content-end">
+                       <a class="link btn btn-blue" href="#">Подробнее</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+                        <div class="media vertical align-items-center">
+                          <img class="media-image" src="img/sec_my_projects/card_img3.jpg" alt="Generic placeholder image">
+                          <div class="dropdown-divider"></div>
+                          <div class="media-body">
+                            <p class="card_subtitle">Онлайн Курс</p>
+                            <h4 class="card_title">BUSINESS Booster: 12 шагов к позитивному менеджменту</h4>
+                            <div class="b-card-body">
+                                <ul class="list">
+                                    <li>Определи свою точку А и поставь трансформационную цель для Х-кратного роста </li>
+                                    <li>Выяви свои сильные и слабые стороны, узнай как все изменить и создать прорыв за 12 шагов</li>
+                                    <li>Создай программу развития себя и команды, основанную на сильных сторонах  </li>
+                                    <li>Выйди на новый уровень профессионализма в менеджменте</li>
+                                </ul>
+                            </div>
+                            <div class="dropdown-divider"></div>
+                            <div class="b-card-footer">
+                               <div class="counter">12 практикумов</div> 
+                               <div class="views">
+                                   <img class="mr-1" src="img/icons/human.svg">
+                                   240
+                               </div>
+                               <a class="link btn btn-blue" href="#">Подробнее</a>
+                            </div>
+                          </div>
+                        </div>
+                    </div>  
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="img/abs_pic/screen.svg" class="abs_pic screen">
+                        <div class="media vertical align-items-center">
+                        <div class="date_wrap abs_date">
+                            <div class="item">
+                                <span>Старт</span>
+                                <div class="date">
+                                    <div>1</div>
+                                    <span>июн</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <span>Финиш</span>
+                                <div class="date">
+                                    <div>19</div>
+                                    <span>июн</span>
+                                </div>
+                            </div>
+                        </div>
+                          <img class="media-image" src="img/sec_my_projects/card_img4.jpg" alt="Generic placeholder image">
+                          <div class="dropdown-divider"></div>
+                          <div class="media-body">
+                            <p class="card_subtitle">Инновационный Корпоративный Университет</p>
+                            <h4 class="card_title">Корпоративный LMS-Акселератор</h4>
+                            <div class="b-card-body">
+                                <ul class="list">
+                                    <li>Система молниеносного масштабирования компетенций  и лучших практик</li>
+                                    <li>Экосистема позитивного менеджмента и  инструментов для Х-кратного роста </li>
+                                    <li>Фабрика по созданию и развитию сотрудников А-класса в формате марафонов достижения целей</li>
+                                    <li>Акселератор бизнеса и корпоративной культуры лидерства </li>
+                                </ul>
+                            </div>
+                            <div class="dropdown-divider"></div>
+                             <div class="b-card-footer">
+                               <div class="counter">60 практикумов</div> 
+                               <div class="views">
+                                   <img class="mr-1" src="img/icons/human.svg">
+                                   51
+                               </div>
+                               <a class="link btn btn-blue" href="#">Подробнее</a>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>        
+            <div class="card with-date">
+                <img alt="" class="abs_pic clock" src="img/abs_pic/clock.svg">
+                <img alt="" class="abs_pic dubl_line2" src="img/abs_pic/dubl_line.svg">
+                <div class="media align-items-center">
+                    <div class="media-image-abs_wrapp">
+                        <img class="mr-md-3 media-image media-image-abs" src="img/sec_my_projects/card_img5.jpg" alt="Generic placeholder image">
+                    </div>
+                  <div class="media-body">
+                    <div class="date_wrap">
+                        <div class="item">
+                            <span>Старт</span>
+                            <div class="date">
+                                <div>1</div>
+                                <span>июн</span>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <span>Финиш</span>
+                            <div class="date">
+                                <div>19</div>
+                                <span>июн</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="card_subtitle">Офлайн работа в компании</p>
+                    <h4 class="card_title">Позитивная Трансформация 3.0</h4>
+                    <div class="b-card-body">
+                        <ul class="list">
+                            <li>Трансформация команды в настоящих победителей </li>
+                            <li>Трансформация сопротивлений в корпоративную культуру лидерства</li>
+                            <li>Трансформация фокуса с процессов на результаты</li>
+                            <li>Трансформация конфликтов в энергию драйва для Х-кратного роста </li>
+                        </ul>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="b-card-footer justify-content-end">
+                       <a class="link btn btn-blue" href="#">Подробнее</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card with-date">
+                <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+                <div class="media align-items-center">
+                    <div class="media-image-abs_wrapp">
+                        <img class="mr-md-3 media-image media-image-abs" src="img/sec_my_projects/card_img6.jpg" alt="Generic placeholder image">
+                    </div>
+                  <div class="media-body">
+                    <p class="card_subtitle">I-STRATEGY</p>
+                    <h4 class="card_title">i-strategy: Партнерство для кратного роста</h4>
+                    <div class="b-card-body">
+                        <ul class="list">
+                            <li>Стратегия трансформации команды и бизнес-системы для Х-кратного роста </li>
+                            <li>ТСтратегия выхода собственника из операционного управления</li>
+                            <li>Стратегия привлечения инвестиций и капитализации бизнеса</li>
+                        </ul>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="b-card-footer justify-content-end">
+                       <a class="link btn btn-blue" href="#">Подробнее</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="card card-with-table">
+                <img alt="" class="abs_pic stone2" src="img/abs_pic/stone.svg">
+                <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+                <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
+                <div class="media align-items-center">
+                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    </div>
+                    <div class="text">
+                        <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
+                        <p>Мне важно помогать тебе в решении твоих задач и достижении поставленных целей. Я поделюсь своим опытом, знаниями и экспертностью. </p>
+                    </div>
+                </div>  
+                <div class="table-responsive">
+                    <table class="table">
                     <thead>
                         <tr>
                             <th scope="col">№</th>
-                            <th scope="col">Контакт</th>
                             <th scope="col">Экспертность</th>
                             <th scope="col">Ответы на <br> вопросы</th>
                             <th scope="col">Экспертные <br> статьи</th>
@@ -141,76 +380,48 @@
                     <tbody>
                         <tr>
                             <th scope="row">1</th>
-                            <td>
-                                <a href="#" class="media">
-                                    <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
-                                    <span>Виталий Тимошенко</span>
-                                </a>
-                            </td>
                             <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
                             <td>26</td>
                             <td>26</td>
                             <td>26</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                         <tr>
                             <th scope="row">2</th>
-                            <td>
-                                <a href="#" class="media">
-                                    <img src="img/sec_my_contacts/icaac.jpg" alt="">
-                                    <span>Виталий Тимошенко</span>
-                                </a>
-                            </td>
                             <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
                             <td>26</td>
                             <td>26</td>
                             <td>44</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                         <tr>
                             <th scope="row">3</th>
-                            <td>
-                                <a href="#" class="media">
-                                    <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
-                                    <span>Виталий Тимошенко</span>
-                                </a>
-                            </td>
                             <td class="expertise">Управление, Менеджмент, командообразование</td>
                             <td>26</td>
                             <td>26</td>
                             <td>54</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                         <tr>
                             <th scope="row">4</th>
-                            <td>
-                                <a href="#" class="media">
-                                    <img src="img/sec_my_contacts/igor.jpg" alt="">
-                                    <span>Виталий Тимошенко</span>
-                                </a>
-                            </td>
                             <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
                             <td>26</td>
                             <td>26</td>
                             <td>6</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                         <tr>
                             <th scope="row">5</th>
-                            <td>
-                                <a href="#" class="media">
-                                    <img src="img/sec_my_contacts/iomtov.jpg" alt="">
-                                    <span>Виталий Тимошенко</span>
-                                </a>
-                            </td>
                             <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
                             <td>26</td>
                             <td>26</td>
                             <td>11</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                     </tbody>
                 </table>
+                </div>
+                
             </div>
         </div>
     </section>
