fixes + absolute icons

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-7 col-md-6">
+                <div class="col-xl-7 col-md-6 right-col">
                     <p class="main-txt">
                         С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента. Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста?
                     </p>
@@ -157,15 +157,15 @@
                         <div class="item">
                             <span>Старт</span>
                             <div class="date">
-                                <div>1</div>
                                 <span>июн</span>
+                                <div>1</div>
                             </div>
                         </div>
                         <div class="item">
                             <span>Финиш</span>
                             <div class="date">
-                                <div>19</div>
                                 <span>июн</span>
+                                <div>19</div>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                   </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card margin-b-80">
                 <div class="media align-items-center">
                   <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img2.jpg" alt="Generic placeholder image">
                   <div class="media-body">
@@ -206,13 +206,13 @@
                     </div>
                     <div class="dropdown-divider"></div>
                     <div class="b-card-footer justify-content-end">
-                       <a class="link btn btn-blue" href="#">Подробнее</a>
+                       <a class="link btn btn-blue margin-minus" href="#">Подробнее</a>
                     </div>
                   </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 pr-22">
                     <div class="card">
                         <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
                         <div class="media vertical align-items-center">
@@ -242,7 +242,7 @@
                         </div>
                     </div>  
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pl-22">
                     <div class="card">
                         <img src="img/abs_pic/screen.svg" class="abs_pic screen">
                         <div class="media vertical align-items-center">
@@ -250,15 +250,15 @@
                             <div class="item">
                                 <span>Старт</span>
                                 <div class="date">
-                                    <div>1</div>
                                     <span>июн</span>
+                                    <div>1</div>
                                 </div>
                             </div>
                             <div class="item">
                                 <span>Финиш</span>
                                 <div class="date">
-                                    <div>19</div>
                                     <span>июн</span>
+                                    <div>19</div>
                                 </div>
                             </div>
                         </div>
@@ -380,42 +380,42 @@
                     <tbody>
                         <tr>
                             <th scope="row">1</th>
-                            <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
-                            <td>26</td>
-                            <td>26</td>
-                            <td>26</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
-                            <td>26</td>
-                            <td>26</td>
-                            <td>44</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td class="expertise">Управление, Менеджмент, командообразование</td>
-                            <td>26</td>
-                            <td>26</td>
-                            <td>54</td>
-                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
-                            <td>26</td>
-                            <td>26</td>
+                            <td class="expertise">Менеджемент</td>
+                            <td>101</td>
+                            <td>3</td>
                             <td>6</td>
                             <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                         <tr>
-                            <th scope="row">5</th>
-                            <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
-                            <td>26</td>
-                            <td>26</td>
+                            <th scope="row">2</th>
+                            <td class="expertise">Нетворкинг</td>
+                            <td>98</td>
+                            <td>6</td>
+                            <td>9</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td class="expertise">Кратный рост</td>
                             <td>11</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td class="expertise">Карьера </td>
+                            <td>76</td>
+                            <td>1</td>
+                            <td>11</td>
+                            <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td class="expertise">Бизнес</td>
+                            <td>4</td>
+                            <td>0</td>
+                            <td>20</td>
                             <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
                         </tr>
                     </tbody>
@@ -528,9 +528,10 @@
     <!-- / sec_my_contacts -->
     <section class="sec sec_my_articles">
         <div class="container">
-            <img alt="" class="abs_pic dubl_stone" src="img/abs_pic/dubl_stone.svg">
-            <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_my_articles/title_label.svg" alt="title_label">
                 <h2>Мои экспертные статьи в сообществе Smart Expert</h2>
@@ -632,6 +633,11 @@
     <!-- sec_success_stories -->
     <section class="sec sec_success_stories">
         <div class="container">
+            <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
+            <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_my_contacts/title_label.svg" alt="title_label">
                 <h2>Истории успеха</h2>
@@ -672,6 +678,10 @@
 
     <section class="sec sec_your_mentor">
         <div class="container">
+             
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
                 <h2>Хочешь я стану твоим наставником в карьере и <br> бизнесе для кратного роста?</h2>
