--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row align-items-center">
+                <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
                         <h5>Константин Лашкевич</h5>
@@ -101,17 +101,16 @@
                             <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
                             <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
+                        <a href="#" class="btn btn-blue">История взлетов и падений</a>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов,
-                            чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я создал методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных компаний, помогая им внедрять в своей работе ту методику, которая
-                            помогала мне выводить холдинги в лидеры отрасли. </p>
-                        <p>В моей копилке есть уже несколько эффективных авторских курсов, которые помогают менеджерам и ТОП-менеджера лучше организовать работу своей команды, быстрее расти по карьерной лестнице и применять мои методики для
-                            достижения поставленных целей. </p>
+                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов, чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
+                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры отрасли. </p>
+                        <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать свои знания и навыки через <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
+                        <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i> </p>
                     </div>
                 </div>
             </div>
