minor fix mob & PC

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -58,14 +58,15 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Константин Лашкевич</h1>
-                    <p class="undertitle">Основатель и идеолог проекта “Позитивный Менеджмент”</p>
+                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами Forbes</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинг “ННК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинг “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert и автор методологии “Позитивный Менеджмент”</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
                         </ul>
                     </div>
                     <div class="works">
@@ -120,8 +121,8 @@
     <!-- sec_offer -->
     <section class="sec sec_offer">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-xl-5 col-md-6">
+            <div class="row align-items-center justify-content-between">
+                <div class="col col-md-6 left-col">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
@@ -180,7 +181,7 @@
                     </div>
                     <div class="dropdown-divider"></div>
                     <div class="b-card-footer">
-                       <div class="counter">12 этапов, 60 уроков</div> 
+                       <div class="counter">12 этапов, 60 уроков</div>
                        <div class="views">
                            <img class="mr-1" src="img/icons/human.svg">
                            1011
@@ -230,7 +231,7 @@
                             </div>
                             <div class="dropdown-divider"></div>
                             <div class="b-card-footer">
-                               <div class="counter">12 практикумов</div> 
+                               <div class="counter">12 практикумов</div>
                                <div class="views">
                                    <img class="mr-1" src="img/icons/human.svg">
                                    240
@@ -239,7 +240,7 @@
                             </div>
                           </div>
                         </div>
-                    </div>  
+                    </div>
                 </div>
                 <div class="col-md-6 pl-22">
                     <div class="card">
@@ -276,7 +277,7 @@
                             </div>
                             <div class="dropdown-divider"></div>
                              <div class="b-card-footer">
-                               <div class="counter">60 практикумов</div> 
+                               <div class="counter">60 практикумов</div>
                                <div class="views">
                                    <img class="mr-1" src="img/icons/human.svg">
                                    51
@@ -287,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-            </div>        
+            </div>
             <div class="card with-date">
                 <img alt="" class="abs_pic clock" src="img/abs_pic/clock.svg">
                 <img alt="" class="abs_pic dubl_line2" src="img/abs_pic/dubl_line.svg">
@@ -363,7 +364,7 @@
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
                         <p>Мне важно помогать тебе в решении твоих задач и достижении поставленных целей. Я поделюсь своим опытом, знаниями и экспертностью. </p>
                     </div>
-                </div>  
+                </div>
                 <div class="table-responsive">
                     <table class="table">
                     <thead>
@@ -420,7 +421,7 @@
                     </tbody>
                 </table>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -677,7 +678,7 @@
 
     <section class="sec sec_your_mentor">
         <div class="container">
-             
+
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
@@ -718,7 +719,7 @@
                     </table>
                 </div>
                 <div class="col-md-6">
-                    <div class="soc_links_wrapp m-auto">
+                    <div class="soc_links_wrapp mx-md-auto">
                         <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                         <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
                         <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
