--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Об эксперте</a>
+                    <a class="nav-link" href="#about-expert">Об эксперте</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Мои проекты</a>
+                    <a class="nav-link" href="#my-projects">Мои проекты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Моя экспертность</a>
+                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Деловые контакты </a>
+                    <a class="nav-link" href="#contacts">Деловые контакты </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Мои статьи</a>
+                    <a class="nav-link" href="#my_articles">Мои статьи</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Отзывы</a>
+                    <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Я - наставник</a>
+                    <a class="nav-link" href="#me_mentor">Я - наставник</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -90,7 +90,7 @@
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-            <div class="row align-items-center">
+            <div id="about-expert" class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
@@ -122,7 +122,7 @@
     </section>
     <!-- / sec_bio -->
     <!-- sec_offer -->
-    <section class="sec sec_offer">
+    <section id="my_expertize" class="sec sec_offer">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
@@ -142,7 +142,7 @@
         </div>
     </section>
     <!-- / sec_offer -->
-    <section class="sec sec_my_projects">
+    <section id="my-projects" class="sec sec_my_projects">
         <img alt="" class="abs_pic brain" src="img/abs_pic/brain.svg">
         <div class="container">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -430,7 +430,7 @@
         </div>
     </section>
     <!-- sec_my_contacts -->
-    <section class="sec sec_my_contacts">
+    <section id="contacts" class="sec sec_my_contacts">
         <div class="container">
             <img alt="" class="abs_pic dubl_stone d-md-block d-none" src="img/abs_pic/dubl_stone.svg">
             <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
@@ -532,7 +532,7 @@
         </div>
     </section>
     <!-- / sec_my_contacts -->
-    <section class="sec sec_my_articles">
+    <section id="my_articles" class="sec sec_my_articles">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -637,7 +637,7 @@
     </section>
     <!-- / sec_my_articles -->
     <!-- sec_success_stories -->
-    <section class="sec sec_success_stories">
+    <section id="reviews" class="sec sec_success_stories">
         <div class="container">
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
@@ -682,7 +682,7 @@
     </section>
     <!-- / sec_success_stories -->
 
-    <section class="sec sec_your_mentor">
+    <section id="me_mentor" class="sec sec_your_mentor">
         <div class="container">
 
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -758,7 +758,7 @@
     </footer>
     <!-- / footer -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/lightslider.min.js"></script>
@@ -818,6 +818,43 @@
                 }]
 
             });
+
+            // scrollToSection
+            // Select all links with hashes
+            $('a[href*="#"]')
+                // Remove links that don't actually link to anything
+                .not('[href="#"]')
+                .not('[href="#0"]')
+                .click(function(event) {
+                    // On-page links
+                    if (
+                        location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') &&
+                        location.hostname == this.hostname
+                    ) {
+                        // Figure out element to scroll to
+                        var target = $(this.hash);
+                        target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                        // Does a scroll target exist?
+                        if (target.length) {
+                            // Only prevent default if animation is actually gonna happen
+                            event.preventDefault();
+                            $('html, body').animate({
+                                scrollTop: target.offset().top
+                            }, 500, function() {
+                                // Callback after animation
+                                // Must change focus!
+                                var $target = $(target);
+                                $target.focus();
+                                if ($target.is(":focus")) { // Checking if the target was focused
+                                    return false;
+                                } else {
+                                    $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
+                                    $target.focus(); // Set focus again
+                                };
+                            });
+                        }
+                    }
+                });
         });
     </script>
 </body>
