--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     </section>
     <!-- / sec_profile -->
     <!-- sec_bio -->
-    <section class="sec sec_bio">
+    <section id="about-expert" class="sec sec_bio">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-            <div id="about-expert" class="row align-items-center">
+            <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
