redesign sec_offer

--- a/index.html
+++ b/index.html
@@ -124,17 +124,18 @@
     <!-- sec_offer -->
     <section id="my_expertize" class="sec sec_offer">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-xl-7 col-md-6 right-col">
-                    <p class="main-txt">
-                        С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента. Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста?
-                    </p>
-                    <a href="#" class="btn btn-orange">
+                <div class="col-xl-7 col-md-6 right-col main-txt">
+                    <h2>Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста? </h2>
+                    <p>С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента.</p>
+                    <a href="#" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
